Added smoke and regression test xml file

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 				<version>${maven.surefire.plugin.version}</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>${testngFileName}.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
